<resources>
    <string name="app_name">WordSplash</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="info_tv_rules">Rules</string>
    <string name="info_tv_about">About</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="activity_about_title">About</string>
    <string name="activity_about_authors_title">Authors</string>
    <string name="activity_about_fork"><a href="https://github.com/vovaksenov99/WordSplash">Fork us</a></string>
    <string name="activity_about_app_name">Word Splash</string>
    <string name="activity_about_desribe">Interactive game</string>
    <string name="activity_about_authors_list">Vladimir Aksenov\nVladimir Sorokin\nDmitry Znobischev\nOlga Ponkratova</string>
    <string name="activity_rules_title">Rules</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_score">History</string>
    <string name="activity_rules_description">
        Main goal of this game is to construct a real word from a given letters set.\nBut beware! You time is limited!\n\nAlso remember, once you constructed wrong word your current game will be reseted.\n\nGood luck!
    </string>
</resources>
